Added the bar-tab tab navigation dummy to index.html. This is a simple hack that allows for slide transitions to make it appear as if the tabs do not move.

--- a/partials/home.html
+++ b/partials/home.html
@@ -4,21 +4,19 @@
 
 <div class="content content-padded center home-content">
     <br/>
+    <div class="snap-text">
+        <img ng-src="assets/images/snap-txt.png" />
+    </div>
     <div class="navi">
-        <a ng-click="$navigate.go('/sell', 'none')" style="padding:35px 0;">
+        <a ng-click="$navigate.go('/sell', 'modal')" style="padding:35px 0;">
             <img ng-src="assets/images/sell-button.png" />
         </a>
-    </div>
-    <div style="margin-right:125px;">
-        <img ng-src="assets/images/sell-arrow.png" />
-    </div>
-    <div>
-        <img ng-src="assets/images/snap-txt.png" />
     </div>
     <div class="sell-bullets">
         <ul>
             <li>Take 4 to 8 photos.</li>
-            <li>Photograph labels and tags.</li>
+            <li>Photograph labels, tags, and</li>
+            <li>any unique details.</li>
         </ul>
     </div>
 </div>
