--- a/partials/reset_password.html
+++ b/partials/reset_password.html
@@ -1,3 +1,8 @@
+<style type="text/css" media="screen">
+    .bar-tab { display:none; }
+    .content, .bar-standard { padding-bottom:0px; }
+</style>
+
 <header class="bar-nav">
 	<a class="button-prev" ng-click="$navigate.back()">
     	Back
