--- a/partials/sell.html
+++ b/partials/sell.html
@@ -1,3 +1,8 @@
+<style type="text/css" media="screen">
+    .bar-tab { display:none; }
+    .content, .bar-standard { padding-bottom:0px; }
+</style>
+
 <header class="bar-nav">
     <button class="button" ng-click="cancelNewListing()" confirm-action="Any photos you've taken or information entered will be lost.">
     	Cancel
