--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,42 @@
 [[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
 	display: none !important;
 }
- 
- .bar-nav {
-     /* unless iOS 7 */
-     top: 0;
- }
- 
- 
+
  [class*="bar-"] {
-     background-color: #555555;
- }
+    background-color: #555555;
+}
  
- .inset-el {
-     width: auto;
-     margin-right: 10px;
-     margin-left: 10px;
- }
+.bar-nav {
+    /* unless iOS 7 */
+    top: 0;
+    
+    /* 05BC8D 5BCF95 6B89E5 #3E50C1 28BF9F 30C1A1 57DD96 */
+    background-color: #33DBB6;
+}
+ 
+.inset-el {
+    width: auto;
+    margin-right: 10px;
+    margin-left: 10px;
+}
 
 select {
 	-webkit-appearance: ;
 }
  
- #overlay {
-    opacity:0.35;
-    background-color:#000;
+#overlay {
+    opacity:.5;
+    background-color:#ffffff;
     color: #fff;
     width:100%;
     height:100%;
     z-index:10;
-    top:0;
+    top:45px;
     left:0;
     position:fixed;
 }
 
- #overlaySpinner {
+#overlaySpinner {
     z-index:10;
     width:100px;
     height:100px;
@@ -49,12 +51,20 @@ select {
     background:#F5F5F5;
 }
  
- .sell-bullets li, .sell-bullets ul {
-     list-style: none;
-     margin:0;
-     padding:0;
-     margin-top:6px;
- }
+.snap-text {
+    margin-bottom:10px;
+}
+ 
+.sell-bullets {
+    margin-top:20px;
+}
+ 
+.sell-bullets li, .sell-bullets ul {
+    list-style: none;
+    margin:0;
+    padding:0;
+    margin-top:6px;
+}
  
 .sell-bullets li {
     font-size:17px;
@@ -77,9 +87,17 @@ select {
 	padding-bottom: 50px;
 }
  
+.content, .table-view .table-view-divider {
+    background-color:#F8F8F8;
+}
+ 
 .home-content {
     background-color: #FFFFFF;
-
+}
+ 
+ 
+.table-view .table-view-divider {
+    padding-top: 25px;
 }
 
 /* Push buttons 100% */
@@ -139,11 +157,6 @@ select {
 .button:disabled {
     color: #999999;
 }
-
-/* 05BC8D 5BCF95 6B89E5 #3E50C1 28BF9F 30C1A1 57DD96 */
-.bar-nav {
-	background-color: #33DBB6;
-}
  
 .welcome-btns {
     margin-top: 75px;
@@ -182,7 +195,7 @@ select {
 }
 
  .bar-nav [class*="button"] {
-     color: #286B5F; /* #70FCCF or #286B5F*/
+     color: #2D9B7E; /* #70FCCF or #286B5F*/
  }
 
  .bar-nav .button:active,
@@ -193,14 +206,14 @@ select {
  .bar-nav .button-next.active,
  .bar-nav .button-primary:active,
  .bar-nav .button-primary.active {
-     color: #286B5F;
+     color: #2D9B7E;
  }
 
  .bar-nav .button-prev:before,
  .bar-nav .button-prev:after,
  .bar-nav .button-next:before,
  .bar-nav .button-next:after {
-     background-color: #286B5F;
+     background-color: #2D9B7E;
  }
 
  .segmented-controller {
@@ -215,8 +228,4 @@ select {
  }
  .segmented-controller li {
      background-color: #d5e9ff;
- }
-
-.table-view .table-view-divider {
-    padding-top: 30px;
  }
