--- a/partials/contact.html
+++ b/partials/contact.html
@@ -7,3 +7,21 @@
 
 <div class="content">
 </div>
+
+<nav class="bar-tab">
+    <ul class="tab-inner">
+        <li class="tab-item active">
+            <a ng-click="$navigate.go('/', 'none')">
+                <img ng-src="assets/images/dashboard.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <a ng-click="$navigate.go('/listings', 'none')">
+                <img ng-src="assets/images/activity.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <img ng-src="assets/images/settings-active.png" />
+        </li>
+    </ul>
+</nav>
