--- a/partials/edit_account.html
+++ b/partials/edit_account.html
@@ -1,6 +1,6 @@
 <header class="bar-nav">
     <a class="button-prev" ng-click="$navigate.back()">Back</a>
-  	<h1 class="title">Edit Account</h1>
+  	<h1 class="title">Update Account</h1>
     <a class="button" ng-click="updateAccount()">
         Save
     </a>
@@ -27,3 +27,21 @@
         <input type="submit" value="Update" style="visibility:hidden" />
 	</form>
 </div>
+
+<nav class="bar-tab">
+    <ul class="tab-inner">
+        <li class="tab-item">
+            <a ng-click="$navigate.go('/', 'none')">
+                <img ng-src="assets/images/dashboard.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <a ng-click="$navigate.go('/listings', 'none')">
+                <img ng-src="assets/images/activity.png" />
+            </a>
+        </li>
+        <li class="tab-item active">
+            <img ng-src="assets/images/settings-active.png" />
+        </li>
+    </ul>
+</nav>
