--- a/partials/listing.html
+++ b/partials/listing.html
@@ -33,3 +33,21 @@
         Cancel Sale
     </a>
 </div>
+
+<nav class="bar-tab">
+    <ul class="tab-inner">
+        <li class="tab-item active">
+            <a ng-click="$navigate.go('/', 'none')">
+                <img ng-src="assets/images/dashboard.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <img ng-src="assets/images/activity-active.png" />
+        </li>
+        <li class="tab-item">
+            <a ng-click="$navigate.go('/settings', 'none')">
+                <img ng-src="assets/images/settings.png" />
+            </a>
+        </li>
+    </ul>
+</nav>
