--- a/partials/user_agreement.html
+++ b/partials/user_agreement.html
@@ -12,3 +12,21 @@
     <h3>{{ title }}</h3>
     <div ng-bind-html-unsafe="content"></div>
 </div>
+
+<nav class="bar-tab">
+    <ul class="tab-inner">
+        <li class="tab-item active">
+            <a ng-click="$navigate.go('/', 'none')">
+                <img ng-src="assets/images/dashboard.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <a ng-click="$navigate.go('/listings', 'none')">
+                <img ng-src="assets/images/activity.png" />
+            </a>
+        </li>
+        <li class="tab-item">
+            <img ng-src="assets/images/settings-active.png" />
+        </li>
+    </ul>
+</nav>
