--- a/partials/welcome.html
+++ b/partials/welcome.html
@@ -14,3 +14,18 @@
         </a>
     </div>
 </div>
+
+<nav class="bar-tab">
+    <ul class="tab-inner">
+        <li class="tab-item content-padded">
+            <a ng-click="$navigate.go('/signup', 'slide')">
+                <button ng-click="addListing()" class="btn button button-primary button-filled">Sign Up</button>
+            </a>
+        </li>
+        <li class="tab-item content-padded">
+            <a ng-click="$navigate.go('/login', 'slide')">
+                <button ng-click="addListing()" class="btn button button-filled">Login</button>
+            </a>
+        </li>
+    </ul>
+</nav>
