Updated text to be more user friendly.

--- a/partials/settings.html
+++ b/partials/settings.html
@@ -7,7 +7,7 @@
         <li class="table-view-divider">ACCOUNT</li>
         <li class="table-view-cell">
             <a ng-click="$navigate.go('/edit_account', 'slide')">
-                Update Account
+                Edit Account
                 <span class="chevron"></span>
             </a>
         </li>
@@ -18,7 +18,7 @@
     </ul>
     
     <ul class="table-view">
-        <li class="table-view-divider">LEARN MORE</li>
+        <li class="table-view-divider">PEDDLEBUDDY</li>
         <li class="table-view-cell">
             <a ng-click="$navigate.go('/faq', 'slide')">
                 FAQ
