--- a/partials/support.html
+++ b/partials/support.html
@@ -8,7 +8,7 @@
 <div class="content">
     <br/>
     <div class="content-padded">
-        <a href="mailto:support@peddlebuddy.com?Subject=Challenge yourself" class="btn button button-block button-primary button-filled">
+        <a href="mailto:support@peddlebuddy.com?Subject=I could use some help" class="btn button button-block button-primary button-filled">
             support@peddlebuddy.com
         </a>
     </div>
