Changed support header text to be more accurate.

--- a/partials/support.html
+++ b/partials/support.html
@@ -14,7 +14,7 @@
     </div>
     
     <ul class="table-view">
-        <li class="table-view-divider">PRIVACY AND SERVICE</li>
+        <li class="table-view-divider">PRIVACY AND LEGAL</li>
         <li class="table-view-cell">
             <a ng-click="$navigate.go('/user_agreement', 'slide')">
                 User Agreement
