--- a/app/sell/sell.css
+++ b/app/sell/sell.css
@@ -1,2 +1,62 @@
 .tab-holder { display:none; }
 .content, .bar-standard { padding-bottom:0px; }
+
+.dropit {
+    position: absolute;
+    background-color: #FF6458;
+    padding: 2px 6px;
+    border: 0;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.reveal-false, .reveal-true {
+    color:#999999;
+}
+
+.divider-true {
+    color:#1971E4;
+    background-color: #CCECFF;
+}
+
+.divider-active {
+    color:#1971E4;
+    background-color: #CCECFF;
+}
+
+.sell-button-inactive {
+    color: #007aff;
+    background-color: transparent;
+    opacity: .3;
+}
+
+.note {
+    color:#999999;
+}
+
+.photos-alert-wrapper {
+    margin-top:0;
+    padding-top:0;
+}
+
+.photos-alert {
+    color:#1971E4;
+    background-color: #BDE2FD;
+    padding: 5px;
+}
+
+.part-two {
+    position: relative;
+}
+
+.sell-overlay {
+    opacity:.5;
+    background-color:#f0f0f0;
+    color: #fff;
+    z-index:9999;
+    top:-1px;
+    left:-1px;
+    right:-1px;
+    bottom:-1px;
+    position:absolute;
+}
